# Kuiper-Cache

./: CMakeList.txt  CMakeLists.txt  README.md  cache_main.cpp  main.cpp
base/: bitfield.cpp  cprintf.cpp  logging.cpp  probe.cpp  random.cpp  types.cpp
base/include/: bitfield.h  callback.h  compiler.h  cprintf.h  cprintf_formats.h  cur_tick.h  extensible.h  flags.h  hash_helpers.h  inst_seq.h  intmath.h  logging.h  named.h  ostream_helpers.h  printable.h  probe.h  random.h  type_traits.h  types.h
cache/: CMakeList.txt  cache.cpp  cache_base.cpp  cache_blk.cpp  cache_l0.cpp  cache_noncoherent.cpp  cache_packet.cpp  cache_packet_queue.cpp
cache/include/: cache.h  cache_base.h  cache_blk.h  cache_interface.h  cache_noncoherent.h  cache_packet.h  cache_packet_queue.h  cache_port.h  cache_probe_arg.h  cache_queue.h  cache_queue_entry.h  cache_request.h
indexing/: base.cpp  indexing_base.cpp  set_associative.cpp  skewed_associative.cpp
indexing/include/: base.h  indexing_base.h  set_associative.h  skewed_associative.h
memory/: global_memory.cpp
memory/include/: global_memory.h
mshr/: mshr.cpp  mshr_queue.cpp
mshr/include/: mshr.h  mshr_queue.h
params/: BaseCache.h  BaseIndexingPolicy.h  BasePrefetcher.h  BaseReplacementPolicy.h  BaseSetAssoc.h  BaseSetAssoc.hh  BaseTags.h  CacheNoncoherent.h  Memrory.h  QueuedPrefetcher.h  RandomReplacement.h  SetAssociative.h  TaggedPrefetcher.h  WriteAllocator.h
prefetch/: base.cc  prefetch_base.cc  prefetch_base.cpp  prefetch_queued.cpp  prefetch_tagged.cpp  tagged.cpp
prefetch/include/: base.h  prefetch_base.h  prefetch_queued.h  prefetch_tagged.h  prefetch_tagged_entry.h  queued.h  tagged.h
replaceable/: replaceable_random.cpp
replaceable/include/: replaceable_base.h  replaceable_entry.h  replaceable_random.h
replacement/: random_rp.cc  random_rp.hh  replaceable_entry.h
tags/: tag_base.cpp  tag_set_assoc.cpp
tags/include/: tag_base.h  tag_set_assoc.h  tagged_entry.h
top/: cache_top.cpp  l0.cpp  l0.json  l1.cpp  memory.json  sim.cpp  top.cpp
top/include/: cache_top.h  l0.h  l1.h  sim.h  top.h
write/: write_queue.cpp  write_queue_entry.cpp
write/include/: write_queue.h  write_queue_entry.h
